--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -1,10 +1,9 @@
 @import "./Vars.scss";
-@import "./Media.scss";
-
+@import "../styles/Media.scss";
 body {
   margin: 0;
   font-family: $theme-font;
-  background: $main-color;
+  background-color: $main-color;
 }
 
 * {
