--- a/src/assets/styles/components/Carousel.scss
+++ b/src/assets/styles/components/Carousel.scss
@@ -1,4 +1,5 @@
 .carousel {
+  // background: #8f57fd;
   overflow: scroll;
   padding-left: 30px;
   width: 100%;
@@ -21,6 +22,6 @@
 
 .carousel__container:hover .carousel-item:hover {
   -webkit-transform: scale(1.5);
-          transform: scale(1.5);
+  transform: scale(1.5);
   opacity: 1;
 }
