--- a/src/assets/styles/components/Search.scss
+++ b/src/assets/styles/components/Search.scss
@@ -1,5 +1,6 @@
 .main {
   display: flex;
+  // background: #8f57fd;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -13,11 +14,11 @@
 }
 
 .input {
-  background-color: rgba(255,255,255,0.1);
+  background-color: rgba(255, 255, 255, 0.1);
   border: 2px solid white;
   border-radius: 25px;
   color: white;
-  font-family: 'Muli', sans-serif;
+  font-family: "Muli", sans-serif;
   font-size: 16px;
   height: 50px;
   margin-bottom: 20px;
